# CS-Comps

./: .gitignore  README.md  bandit.md  index.html  plan1.md  plan2.md  poster-ideas.md  pyproject.toml  resources.md  status.md  status.txt
arp_ssl_toolkit.egg-info/: PKG-INFO  SOURCES.txt
mainpackage/: __init__.py  arpspoof.py  cSubprocess.py  export.py  index.html  main.py  modules.py  networking.py  server.py  server2.py
mainpackage/arp_ssl_toolkit.egg-info/: PKG-INFO  SOURCES.txt
notes/: acknowledgements and references.md  bandit.md  bettercap-notes.md  feature-notes.md  pitch.md  plan1.md  resources.md
poster/: pitch.md  poster-ideas.md  poster-mockup-oct-27
prototype/: README.md  __init__.py  arpspoof.py  bettercap.py  cSubprocess.py  dos.py  getArp.sh  main.py  networking.py  pyproject.toml  setup.cfg
prototype/arpDoS.egg-info/: PKG-INFO  SOURCES.txt
prototype/mainpackage/: __init__.py  arpspoof.py  cSubprocess.py  dos.py  export.py  exporting.py  index.html  main.py  modules.py  networking.py  packetManip.py  server.py  server2.py  sslStripping.py
prototype/mainpackage.egg-info/: PKG-INFO  SOURCES.txt
